# AccountDB-Plugin-Solana_MongoDB

./: .gitignore  AccountsDB Roadmap.docx  README.md
ArchDiagrams/: Readme.md
custom_geyser_plugin/: Cargo.toml
custom_geyser_plugin/src/: accounts_selector.rs  accounts_selectors.rs  geyser_plugin_mongodb.rs  lib.rs  main.rs  mongodb_client.rs  transaction_selector.rs
