[package]
name = "custom_geyser_plugin"
version = "0.1.0"
edition = "2021"
repository="https://github.com/Princeadxisrael/Custom-Geyser-Plugin-Solana"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.1"
chrono = { version = "0.4.24", features = ["serde"] }
crossbeam-channel = "0.5.7"
log = "0.4.17"
openssl = { version = "0.10.42" }
env_logger = "0.10"  # Added this line

serde = "1.0.188"
futures="0.3.28"
serde_derive = "1.0.145"
serde_json = "1.0.85"
solana-geyser-plugin-interface = { version = "=1.17.3" }
solana-logger = { version = "1.17.3" }
solana-measure = { version = "1.17.3" }
solana-metrics = { version = "1.17.3" }
solana-runtime = { version = "1.17.3" }
solana-sdk = { version = "1.17.3" }
solana-transaction-status = { version = "1.17.3" }
thiserror = "1.0.37"
tokio= {version="1.32.0", features=["full"]}

[dependencies.mongodb]
version="3.1.0"

[dev-dependencies]
libc = "0.2.134"
libloading = "0.7.3"
serial_test = "0.9.0"
socket2 = { version = "0.4.7", features = ["all"] }

solana-account-decoder = { version = "1.17.3" }
solana-core = { version = "1.17.3" }
solana-local-cluster = { version = "1.17.3" }
solana-net-utils = { version = "1.17.3" }
solana-streamer = { version = "1.17.3" }
tempfile = "3.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]